
- Added initial support for h- and p-multigrid solvers and preconditioners for
  matrix-based and matrix-free discretizations with basic GPU capability.

- Block arrays of parallel matrices can now be merged into a single parallel
  matrix with the function HypreParMatrixFromBlocks. This could be useful for
  solving block systems with parallel direct solvers such as STRUMPACK.

New and updated examples and miniapps
-------------------------------------
- Added a new example, Example 25/25p, to demonstrate the use of a Perfectly
  Matched Layer (PML) for the simulation of electromagnetic wave propagation.
  The example defines and solves several indefinite Maxwell problems.

- Added a new Example 26/26p to demonstrate the construction of a matrix-free
  geometric and p-multigrid preconditioner for the Laplace problem.

- Added a new example, Example 27/27p, to demonstrate the enforcement of
  various boundary conditions with the Laplace operator.  The example shows the
  procedures for applying Dirichlet, Neumann (both homogeneous and
  inhomogeneous), Robin, and periodic boundary conditions with either H1 or DG
  discretizations.

- Added a simple meshing miniapp, Twist, which demonstrates MFEM's strategy of
  stitching together opposite surfaces of a mesh to create a topologically
  periodic mesh.

- Added a new meshing miniapp, Minimal Surface, which solves Plateau's problem:
  the Dirichlet problem for the minimal surface equation.

- Added partial assembly support to examples 4/4p and 5/5p, with diagonal
  preconditioning.

- Added a new test problem in example 24/24p, demonstrating a mixed bilinear
  form for H(div) and L_2, with partial assembly support.

Improved testing
----------------
- Added a GitLab pipeline that automates PR testing on supercomputing systems
  and Linux clusters at Lawrence Livermore National Lab (LLNL). This can be
  triggered only by LLNL developers, see .gitlab-ci.yml, the .gitlab directory
  and the updated CONTRIBUTING.md file.
